# mudfas

./: .gitmodules  AUTHORS  ChangeLog  ChangeLog.0  Makefile.am  NEWS  README  TODO  configure.ac
doc/: Makefile.am  appendix.m  calctable.m  fun1_2d.m  fun1_3d.m  fun3_2d.m  fun3_3d.m  fun4_2d.m  fun4_3d.m  fun5_2d.m  fun5_3d.m  fun6_2d.m  fun6_3d.m  fun7_2d.m  fun7_3d.m  fun8_2d.m  fun8_3d.m  plotEfield.m  plotEfield3d.m  plotd2d.m  plotd3d.m  plotphi.m  plotphi3d.m  poisson.tex  solver2d_def.m  solver3d_def.m  startup.m  test1.m  test3.m  test4.m  test5.m  test6.m  test7.m  test8.m  testall.m
lib/: Makefile.am
matlab/: MGFAS2D.cpp  MGFAS3D.cpp  Makefile.am  Ne2d.m  Ne3d.m  Te2d.m  Te3d.m  Types.hxx  adjmd2.m  adjmd3.m  bmpoisson.cc  bmpoisson.hxx  bmpoisson3D.cc  bmpoisson3D.hxx  bmutil.hxx  calcnmudpack.m  check_fun8_2d.m  check_fun8_3d.m  fmg2d.m  fmg3d.m  fun10_2d.m  fun11_2d.m  fun1_2d.m  fun1_3d.m  fun2_2d.m  fun2_3d.m  fun3_2d.m  fun3_3d.m  fun4_2d.m  fun4_3d.m  fun5_2d.m  fun5_3d.m  fun6_2d.m  fun6_3d.m  fun7_2d.m  fun7_3d.m  fun8_2d.m  fun8_3d.m  fun9_2d.m  initpde2.m  (+31 more)
share/: Makefile.am  beamBS2d.hdf  beamBS3d.hdf  mudfas2d.conf  mudfas3d.conf
src/: Makefile.am  boundary.h  init.cpp  linear-solver.cpp  linear-solver.h  mudfas-defs.h  mudfas.cpp  mudfas.h  nonlinear-solver.cpp  nonlinear-solver.h  poisson-boltzmann.cpp  poisson-boltzmann.h  poisson.cpp  poisson.h  prolon.cpp  restrict.cpp
tests/: Blitz.cpp  Integrate.cpp  Makefile.am  Parser.cpp  TestSolver.cpp  bench-solver.sh  test-solver.h
