

matlabdir = $(prefix)/matlab/mudfas
matlab_DATA = adjmd2.m adjmd3.m bmpoisson3D.cc bmpoisson3D.hxx bmpoisson.cc \
bmpoisson.hxx bmutil.hxx calcnmudpack.m check_fun8_2d.m check_fun8_3d.m \
fmg2d.m fmg3d.m fun1_2d.m fun1_3d.m fun2_2d.m fun2_3d.m fun3_2d.m fun3_3d.m \
fun4_2d.m fun4_3d.m fun5_2d.m fun5_3d.m fun6_2d.m fun6_3d.m fun7_2d.m \
fun8_2d.m fun8_3d.m initpde2.m initpde3.m lop2d.m lop3d.m mg2d.m mg3d.m MGFAS2D.cpp \
mgfas2d.m MGFAS3D.cpp mgfas3d.m Ne2d.m Ne3d.m nldF.m nlF.m plot2dUF.m \
plot3dUF.m plotdefect2d.m plotdefect3d.m prolon1.m prolon2.m prolon3.m \
res2.m res3.m resu2.m resu3.m smooth2d.m smooth3d.m \
solver2d_def.m solver3d_def.m solver_const.m solver_par_parsing.m swk2.m \
swk3.m Te2d.m Te3d.m trsfc2.m trsfc3.m Types.hxx view_solver.m

EXTRA_DIST = $(matlab_DATA)
