
cpptoolsdir = $(prefix)/src/c++-tools

cpptools_DATA = \
c++-tools/ChangeLog c++-tools/ChangeLog.0 \
c++-tools/any.h \
c++-tools/bench.h \
c++-tools/classexception.h \
c++-tools/fourier-dxml.h \
c++-tools/fourier-fftw3.h \
c++-tools/fourier-fftw.h \
c++-tools/fourier.h \
c++-tools/fourier-mlib.h \
c++-tools/gnuplot-interface.cpp c++-tools/gnuplot-interface.h \
c++-tools/hdf4-interface.cpp c++-tools/hdf4-interface.h \
c++-tools/hdf5-interface.cpp c++-tools/hdf5-interface.h \
c++-tools/hdf-interface.h \
c++-tools/integrate.cpp c++-tools/integrate.h \
c++-tools/parser2.cpp c++-tools/parser2.h \
c++-tools/parser.cpp c++-tools/parser.h \
c++-tools/plplot-interface.cpp c++-tools/plplot-interface.h \
c++-tools/time-utils.h


EXTRA_DIST = \
boundary.h \
init.cpp \
linear-solver.cpp \
linear-solver.h \
mudfas.cpp \
mudfas-defs.h \
mudfas.h \
nonlinear-solver.cpp \
nonlinear-solver.h \
poisson-boltzmann.cpp \
poisson-boltzmann.h \
poisson.cpp \
poisson.h \
prolon.cpp \
restrict.cpp \
$(cpptools_DATA)

